# ctq-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER_FIX.md  Dockerfile  README.md  main.py  quotes.json
.github/workflows/: ci.yml  docker-publish.yml
migrations/: 001_create_users_table.sql
sql/: init.sql
src/: config.rs  db.rs  error.rs  health.rs  main.rs  metrics.rs  models.rs  openapi.rs  puzzle_cache.rs  repository.rs  routes.rs  services.rs  transformer.rs  validators.rs
src/auth/model/: user.rs
src/auth/route/: auth_routes.rs
src/auth/service/: password.rs
src/config/: env.rs  factory.rs  mod.rs
src/ctq/model/: daily_puzzle.rs  daily_puzzle_response.rs  letter_payloads.rs  mod.rs  quote.rs  quote_payloads.rs
src/ctq/route/: daily_letter_routes.rs  daily_quote_routes.rs  daily_routes.rs  mod.rs
src/middleware/: auth_middleware.rs  cors.rs  mod.rs
src/models/: activity.rs  auth.rs  budget.rs  check_letter.rs  check_quote.rs  daily_puzzle.rs  daily_puzzle_response.rs  global_stats.rs  problem_details.rs  puzzle_response.rs  puzzle_row.rs  puzzle_state.rs  quote.rs  quote_row.rs  solve_letter.rs  stats.rs  user.rs
src/repository/: activity.rs  puzzles.rs  users.rs
src/routes/: archive.rs  daily.rs
src/routes/auth/: google.rs  logout.rs  me.rs  mod.rs
src/routes/me/: activities.rs  mod.rs  stats.rs
src/routes/puzzles/: archive.rs  daily.rs  mod.rs
src/services/: activity_service.rs  google_oauth.rs  jwt.rs  puzzle.rs
src/util/: constants.rs  daily_puzzle_utils.rs  date_time_utils.rs  db_utils.rs  init_quotes_utils.rs  mod.rs  refresh_utils.rs
src/utils/: daily_puzzle_utils.rs  init_quotes_utils.rs  refresh_utils.rs
src/validators/: activity_validator.rs  date_range.rs  puzzle_validator.rs
