[package]
name = "ctq-api"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "fmt", "ansi"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.0"
sha2 = "0.10.8"
base64 = "0.22.1"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
governor = "0.10.1"
url = "2.5.0"
http = "1.1.0"

[dev-dependencies]
mockall = "0.12.1"
tokio-test = "0.4.1"
