[package]
name = "ctq-api"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.52.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt", "ansi"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
sha2 = "0.11.0"
base64 = "0.22.1"
rand = "0.8.5"
reqwest = { version = "0.13.2", features = ["json"] }
url = "2.5.8"
http = "1.4.0"
urlencoding = "2.1.3"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = "z"
